SimpleWeather: simplify forecasts and alerts view models
* Remove forecasts and alerts from main viewmodel and move to their own
* Load forecasts and alerts when needed directly from database
* Simplify loading by using IncrementalLoadingCollection
* Load a separate list (max 24 items) for ForecastGraphPanel

--- a/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
@@ -26,7 +26,7 @@
         <ScrollViewer HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled"
                       VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
                       Margin="10" Grid.Row="1">
-            <ItemsControl x:Name="StackControl" ItemsSource="{x:Bind WeatherView.Alerts, Mode=OneWay}">
+            <ItemsControl x:Name="StackControl" ItemsSource="{x:Bind AlertsView.Alerts, Mode=OneWay}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate x:DataType="controls:WeatherAlertViewModel">
                         <StackPanel>
