--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -148,6 +148,7 @@
             <toolkitConverters:EmptyCollectionToObjectConverter x:Key="collectionBooleanConverter" EmptyValue="False" NotEmptyValue="True" />
             <toolkitConverters:EmptyStringToObjectConverter x:Key="stringBooleanConverter" EmptyValue="False" NotEmptyValue="True" />
             <toolkitConverters:CollectionVisibilityConverter x:Key="collectionVisibilityConverter" />
+            <toolkitConverters:DoubleToVisibilityConverter x:Key="valueVisibilityConverter" GreaterThan="0" />
             <SolidColorBrush x:Key="SimpleBlue" Color="#0070c0" />
             <SolidColorBrush x:Key="SimpleBlueDark" Color="#00468f" />
             <SolidColorBrush x:Key="SimpleBlueLight" Color="#599ef3" />
