--- a/SimpleWeather.UWP/Controls/ForecastGraphPanel.xaml
+++ b/SimpleWeather.UWP/Controls/ForecastGraphPanel.xaml
@@ -179,7 +179,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20">
-            <ToggleButton x:Name="TempToggleButton" Margin="5,0" Padding="4" Checked="ToggleButton_Checked" Tag="Temp"
+            <ToggleButton x:Name="TempToggleButton" Margin="5,0" Padding="4" Tag="Temp"
                           Style="{ThemeResource ToggleButtonNoDisableRevealStyle}">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
@@ -190,7 +190,7 @@
                     </StackPanel>
                 </ToggleButton.Content>
             </ToggleButton>
-            <ToggleButton x:Name="WindToggleButton" Margin="5,0" Padding="4" Checked="ToggleButton_Checked" Tag="Wind"
+            <ToggleButton x:Name="WindToggleButton" Margin="5,0" Padding="4" Tag="Wind"
                           Style="{ThemeResource ToggleButtonNoDisableRevealStyle}">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
@@ -203,7 +203,7 @@
                     </StackPanel>
                 </ToggleButton.Content>
             </ToggleButton>
-            <ToggleButton x:Name="RainToggleButton" Margin="5,0" Padding="4" Checked="ToggleButton_Checked" Tag="Rain"
+            <ToggleButton x:Name="RainToggleButton" Margin="5,0" Padding="4" Tag="Rain"
                           Style="{ThemeResource ToggleButtonNoDisableRevealStyle}" Foreground="White">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
